fix the distorted png

--- a/style.css
+++ b/style.css
@@ -34,3 +34,8 @@
     0 41.8px 33.4px rgba(0, 0, 0, 0.086),
     0 100px 80px rgba(0, 0, 0, 0.12)
 }
+
+.fixImg {
+    display: table;
+    width: 100%;
+}
